Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.12.2024 10:03:14</small><a id="top"></a><table ><nav id="lunchbar"><div class="nav-row"><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li></ul></div><div class="nav-row"><ul><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li></ul></div><div class="nav-row"><ul><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">&#9757;Jídelna Antala Staška</a></li></ul></div></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.12.2024 10:33:18</small><a id="top"></a><table ><nav id="lunchbar"><div class="nav-row"><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li></ul></div><div class="nav-row"><ul><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li></ul></div><div class="nav-row"><ul><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">&#9757;Jídelna Antala Staška</a></li></ul></div></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -103,6 +103,14 @@
 </tr>
 </table>
 <table>
+<section id="Rybarna"></section><a href="#top">&#8635;</a><tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
+<tr>
+<td>
+<ol><li>Peceny filet z cerstveho pstruha s pecenymi rajcaty a bazalkovym pestem, indicke cizrnove kari s pecenou dyni a zeleninou 175</li><li>Peceny filet z cerstve prazmy s pecenymi rajcaty a bazalkovym pestem, indicke cizrnove kari s pecenou dyni a zeleninou 205</li><li>Dwaejigogi bokkeum – korejske pikantni veprove nudlicky s gochujang, zazvorem, zelenou cibulkou a prazenym sezamem, jasminova ryze, kimci z pekingskeho zeli 169</li><li>Linguine s nudlickami hoveziho flank steaku, pecenou dyni, susenymi rajcaty, petrzelkovym pestem a hoblinami grana padano {L} 199</li><li>Kvetakove placicky s kapustou a spetkou muskatu, pecene brambory, tatarska omacka {L} 169</li></ol>
+</td>
+</tr>
+</table>
+<table>
 <section id="uCejpu"></section><a href="#top">&#8635;</a><tr><th>Šalanda U Čejpů<br><a href="https://www.ucejpu.cz/salanda/index.php#denni-menu">https://www.ucejpu.cz/salanda/index.php#denni-menu</a></th></tr>
 <tr>
 <td>
@@ -190,15 +198,15 @@
 </tr>
 </table>
 <table>
-<section id="poctivaRestaurace"></section><a href="#top">&#8635;</a><tr><th>Poctiva restaurace<br><a href="https://poctivarestaurace.cz/krc/">https://poctivarestaurace.cz/krc/</a></th></tr>
+<section id="poctivaRestaurace"></section><a href="#top">&#8635;</a><tr><th>POCTIVÁ RESTAURACE<br><a href="https://poctivarestaurace.cz/krc/">poctivarestaurace.cz/krc</a></th></tr>
 <tr>
 <td>
-<div class="col-md-5">
-<div class="map">
-<iframe allowfullscreen="" frameborder="0" height="100%" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2562.416693567847!2d14.435607276343429!3d50.041024971516926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470b93f6661924d5%3A0x5b1536c4f08d61c6!2sNa%20Str%C5%BEi%20343%2F5%2C%20140%2000%20Praha%204-Kr%C4%8D!5e0!3m2!1scs!2scz!4v1692708068577!5m2!1scs!2scz" style="border:0" width="100%"></iframe>
-<a class="btn way-btn" href="https://www.google.com/maps/dir//Na+Str%C5%BEi+343%2F5,+140+00+Praha+4-Kr%C4%8D/@50.041025,14.4356073,17z/data=!4m18!1m8!3m7!1s0x470b93f6661924d5:0x5b1536c4f08d61c6!2sNa+Str%C5%BEi+343%2F5,+140+00+Praha+4-Kr%C4%8D!3b1!8m2!3d50.041025!4d14.4381822!16s%2Fg%2F11c1zm311_!4m8!1m0!1m5!1m1!1s0x470b93f6661924d5:0x5b1536c4f08d61c6!2m2!1d14.4381822!2d50.041025!3e3?entry=ttu" target="_blank">Vyhledat trasu</a>
-</div>
-</div>
+<div class='poctiva-menu'>
+                        <div class='opening-hours'>
+                            <h3>Otevírací doba</h3>
+                            <p>Po – Ne: 11:00 – 23:00</p>
+                        </div>
+                        <h3>Polední menu</h3>Hovězí vývar s játrovými knedlíčky -   55 Kč<br>Kapucínský vepřový guláš, houskový knedlík -   170 Kč<br>Čevabčiči, hořčice , cibule, vařený brambor -   170 Kč<br>Těstoviny tagliatelle s grilovaným krevety, tomato, olivy, bazalka -   220 Kč<br>Smažený žampionový kloboučky plněné sýrem, s kaší -   179 Kč<br>Vepřový burger s trhaným masem, pečené brambory -   199 Kč<br>Pinnsa special, /tomato,vajíčko, mozzarella, šunka, olivy, bazalka/ 220 Kč<br>Jitrnice/jelito, vařený brambor, zelí  -   170 Kč<br></div>
 </td>
 </tr>
 </table>
