Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 13.12.2024 17:13:50</small><a id="top"></a><table ><nav id="lunchbar"><div class="nav-row"><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li></ul></div><div class="nav-row"><ul><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li></ul></div><div class="nav-row"><ul><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">&#9757;Jídelna Antala Staška</a></li></ul></div></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span> Veselé Vánoce🎄 a šťastný nový rok! ⭐</span></div><small>Last update: 13.12.2024 17:18:32</small><a id="top"></a><table ><nav id="lunchbar"><div class="nav-row"><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li></ul></div><div class="nav-row"><ul><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li></ul></div><div class="nav-row"><ul><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></div></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -19,7 +19,7 @@
 </tr>
 </table>
 <table>
-<section id="Mates"></section><a href="#top">&#8635;</a><tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
+<section id="Mates"></section><a href="#top">&#x1F51D;</a><tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
 <div class="row denni-menu" style="max-width:100%; margin:auto; margin-top:70px;">
@@ -37,7 +37,7 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 </tr>
 </table>
 <table>
-<section id="Kuta"></section><a href="#top">&#8635;</a><tr><th>KUTA<br><a href="https://www.menicka.cz/4728-kuta-restaurace-.html">https://www.menicka.cz/4728-kuta-restaurace-.html</a></th></tr>
+<section id="Kuta"></section><a href="#top">&#x1F51D;</a><tr><th>KUTA<br><a href="https://www.menicka.cz/4728-kuta-restaurace-.html">https://www.menicka.cz/4728-kuta-restaurace-.html</a></th></tr>
 <tr>
 <td>
 <div class="menicka">
@@ -75,7 +75,7 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 </tr>
 </table>
 <table>
-<section id="liskaBistrouska"></section><a href="#top">&#8635;</a><tr><th>LIŠKA BISTROUŠKA<br><a href="https://www.liskabistrouska.cz/obedove-menu">https://www.liskabistrouska.cz/obedove-menu</a></th></tr>
+<section id="liskaBistrouska"></section><a href="#top">&#x1F51D;</a><tr><th>LIŠKA BISTROUŠKA<br><a href="https://www.liskabistrouska.cz/obedove-menu">https://www.liskabistrouska.cz/obedove-menu</a></th></tr>
 <tr>
 <td>
 <div class="menicka">
@@ -108,7 +108,7 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 </tr>
 </table>
 <table>
-<section id="Rybarna"></section><a href="#top">&#8635;</a><tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
+<section id="Rybarna"></section><a href="#top">&#x1F51D;</a><tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
 <ol><li>Peceny filet z cerstveho pstruha s pecenymi rajcaty a bazalkovym pestem, indicke cizrnove kari s pecenou dyni a zeleninou 175</li><li>Peceny filet z cerstve prazmy s pecenymi rajcaty a bazalkovym pestem, indicke cizrnove kari s pecenou dyni a zeleninou 205</li><li>Dwaejigogi bokkeum – korejske pikantni veprove nudlicky s gochujang, zazvorem, zelenou cibulkou a prazenym sezamem, jasminova ryze, kimci z pekingskeho zeli 169</li><li>Linguine s nudlickami hoveziho flank steaku, pecenou dyni, susenymi rajcaty, petrzelkovym pestem a hoblinami grana padano {L} 199</li><li>Kvetakove placicky s kapustou a spetkou muskatu, pecene brambory, tatarska omacka {L} 169</li></ol>
@@ -116,7 +116,7 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 </tr>
 </table>
 <table>
-<section id="uCejpu"></section><a href="#top">&#8635;</a><tr><th>Šalanda U Čejpů<br><a href="https://www.ucejpu.cz/salanda/index.php#denni-menu">https://www.ucejpu.cz/salanda/index.php#denni-menu</a></th></tr>
+<section id="uCejpu"></section><a href="#top">&#x1F51D;</a><tr><th>Šalanda U Čejpů<br><a href="https://www.ucejpu.cz/salanda/index.php#denni-menu">https://www.ucejpu.cz/salanda/index.php#denni-menu</a></th></tr>
 <tr>
 <td>
 <section class="daily-meals js-bookmarks-wrapper" id="daily-meals">
@@ -203,7 +203,7 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 </tr>
 </table>
 <table>
-<section id="poctivaRestaurace"></section><a href="#top">&#8635;</a><tr><th>POCTIVÁ RESTAURACE<br><a href="https://poctivarestaurace.cz/krc/">poctivarestaurace.cz/krc</a></th></tr>
+<section id="poctivaRestaurace"></section><a href="#top">&#x1F51D;</a><tr><th>POCTIVÁ RESTAURACE<br><a href="https://poctivarestaurace.cz/krc/">poctivarestaurace.cz/krc</a></th></tr>
 <tr>
 <td>
 <div class='poctiva-menu'>
@@ -216,7 +216,7 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 </tr>
 </table>
 <table>
-<section id="CSAntal"></section><a href="#top">&#8635;</a><tr><th>ČS Antal<br><a href="https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/">https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/</a></th></tr>
+<section id="CSAntal"></section><a href="#top">&#x1F51D;</a><tr><th>ČS Antal<br><a href="https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/">https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/</a></th></tr>
 <tr>
 <td>
 <table class="dennimenu"><tr><td><h3>DENNÍ NABÍDKA KANTÝNA</h3></td><td> </td></tr><tr><td><h3>Polévka</h3></td><td> </td></tr><tr><td>Dýňový krém</td><td>32 Kč</td></tr><tr><td><h3>Hotová jídla</h3></td><td> </td></tr><tr><td>150g Hovězí líčka na víně, šťouchané brambory</td><td>158 Kč</td></tr><tr><td>150g Smažený kuřecí řízek, pečené brambory, tatarka</td><td>149 Kč</td></tr><tr><td>150g Kuřecí sečuánské nudličky, jasmínová rýže</td><td>155 Kč</td></tr><tr><td>300g Pečená kuřecí křídla BBQ, salát Coleslaw</td><td>115 Kč</td></tr><tr><td><h3>Buffet samoobslužný na váhu -- INDIE</h3></td><td> </td></tr><tr><td>Zeleninová caponatta s parmazánem</td><td> </td></tr><tr><td>Cizrnová chana masala</td><td> </td></tr><tr><td>Kokosový Dhál</td><td> </td></tr><tr><td>Mrkvové Byriami s jogurtem</td><td> </td></tr><tr><td>Kuřecí bylinkové kari s kokosovým mlékem</td><td> </td></tr><tr><td>Jasmínová rýže</td><td> </td></tr><tr><td><h3>Týdenní nabídka</h3></td><td> </td></tr><tr><td>domácí těstoviny připravované na objednávku 150g / 300g:</td><td>145 Kč</td></tr><tr><td>Con aglio e pomodori al forno (s česnekem, pečenými rajčaty)</td><td> </td></tr><tr><td><h3>Salátový bar</h3></td><td> </td></tr><tr><td>Výběr z míchaných salátů, krájené jednodruhové sezónní zeleniny hotových salátů, doplněno o</td><td> </td></tr><tr><td>dresinky a kondimenty.</td><td> </td></tr></table>
@@ -224,7 +224,7 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 </tr>
 </table>
 <table>
-<section id="zelenyPruhJidelna"></section><a href="#top">&#8635;</a><tr><th>Zelený pruh jídelna<br><a href="https://restauracezaskolou.cz/jidelni-listek/">https://restauracezaskolou.cz/jidelni-listek/</a></th></tr>
+<section id="zelenyPruhJidelna"></section><a href="#top">&#x1F51D;</a><tr><th>Zelený pruh jídelna<br><a href="https://restauracezaskolou.cz/jidelni-listek/">https://restauracezaskolou.cz/jidelni-listek/</a></th></tr>
 <tr>
 <td>
 <div class="tribe-events-calendar-list">
@@ -411,14 +411,14 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 </tr>
 </table>
 <table>
-<section id="youyouge"></section><a href="#top">&#8635;</a><tr><th>Čínská restaurace YOUYOUGE<br><a href="https://wolt.com/en/cze/prague/restaurant/youyouge">https://wolt.com/en/cze/prague/restaurant/youyouge</a></th></tr>
+<section id="youyouge"></section><a href="#top">&#x1F51D;</a><tr><th>Čínská restaurace YOUYOUGE<br><a href="https://wolt.com/en/cze/prague/restaurant/youyouge">https://wolt.com/en/cze/prague/restaurant/youyouge</a></th></tr>
 <tr>
 <td>
 </td>
 </tr>
 </table>
 <table>
-<section id="antalStaska"></section><a href="#top">&#8635;</a><tr><th>Jídelna Antala Staška<br><a href="https://www.masi-co.com/jidelna-antala-staska/">https://www.masi-co.com/jidelna-antala-staska/</a></th></tr>
+<section id="antalStaska"></section><a href="#top">&#x1F51D;</a><tr><th>Jídelna Antala Staška<br><a href="https://www.masi-co.com/jidelna-antala-staska/">https://www.masi-co.com/jidelna-antala-staska/</a></th></tr>
 <tr>
 <td>
 
