--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span> Veselé Vánoce🎄 a šťastný nový rok! ⭐</span></div><small>Last update: 16.12.2024 09:04:00</small><a id="top"></a><table ><nav id="lunchbar"><div class="nav-row"><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li></ul></div><div class="nav-row"><ul><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li></ul></div><div class="nav-row"><ul><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></div></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span> Veselé Vánoce🎄 a šťastný nový rok! ⭐</span></div><small>Last update: 16.12.2024 09:38:01</small><a id="top"></a><table ><nav id="lunchbar"><div class="nav-row"><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li></ul></div><div class="nav-row"><ul><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li></ul></div><div class="nav-row"><ul><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></div></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -186,7 +186,7 @@
 <td class="name">
 <span class="title cond">Holandský smažený řízek</span>
 <span class="allergen">(A: 1, 3, 7, 12)</span>
-<p class="desc">s bramborovou kaší </p>
+<p class="desc">mačkané cibulové brambory</p>
 </td>
 <td class="price cond">
         159 Kč    </td>
