Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť do nového roku! 🥂</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 09.01.2025 07:03:52 | Praha: 4°C, Polojasno</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť do nového roku! 🥂</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 09.01.2025 07:36:50 | Praha: 5°C, Polojasno</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -124,11 +124,11 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
-<div class="item js-bookmark">
-<a class="link js-bookmark-switcher" href="#day_24116">Středa 08. 01.</a>
+<div class="item js-bookmark active">
+<a class="link js-bookmark-switcher" href="#day_24117">Čtvrtek 09. 01.</a>
 </div>
 </div>
-<table class="list js-bookmark-block" id="day_24116">
+<table class="list js-bookmark-block" id="day_24117" style="display:table;">
 <tr>
 <td class="volume"></td>
 <td class="name">
@@ -151,39 +151,19 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <tr>
 <td class="volume">150g</td>
 <td class="name">
-<span class="title cond">Guláš z hovězího karabáčku</span>
-<span class="allergen">(A: 1, 3, 7, 10)</span>
-<p class="desc">s houskovým knedlíkem, sypaný čerstvou cibulkou                                             </p>
+<span class="title cond">Filírovaný FLANK STEAK</span>
+<span class="allergen">(A: 1, 7, 12)</span>
+<p class="desc">s houbovým přelivem, hranolky</p>
 </td>
 <td class="price cond">
-        179 Kč    </td>
+        199 Kč    </td>
 </tr>
 <tr>
 <td class="volume">150g</td>
 <td class="name">
-<span class="title cond">Kuřecí Kyjev </span>
-<span class="allergen">(A: 1, 3, 7, 12)</span>
-<p class="desc">plněný bylinkovým máslem s mačkaným bramborem a kyselou okurkou                       </p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">300g</td>
-<td class="name">
-<span class="title cond">Krémové rizoto na bílém víně</span>
-<span class="allergen">(A: 7)</span>
-<p class="desc">s filírovanou vepřovou panenkou                                                                       </p>
-</td>
-<td class="price cond">
-        179 Kč    </td>
-</tr>
-<tr>
-<td class="volume">1ks</td>
-<td class="name">
-<span class="title cond">Kuřecí Quesadilla </span>
-<span class="allergen">(A: 1, 3, 7, 9, 12)</span>
-<p class="desc">s hranolky a zakysanou smetanou </p>
+<span class="title cond">Masové kuličky v rajské omáčce</span>
+<span class="allergen">(A: 1, 3, 7)</span>
+<p class="desc">s houskovým knedlíkem</p>
 </td>
 <td class="price cond">
         159 Kč    </td>
@@ -191,9 +171,19 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <tr>
 <td class="volume">150g</td>
 <td class="name">
-<span class="title cond">Katův šleh </span>
-<span class="allergen">(A: 1, 3, 7, 12)</span>
-<p class="desc">s bramboráčky </p>
+<span class="title cond">Hovězí kostky na červeném víně</span>
+<span class="allergen">(A: 1, 7, 12)</span>
+<p class="desc">s bramborovou kaš</p>
+</td>
+<td class="price cond">
+        179 Kč    </td>
+</tr>
+<tr>
+<td class="volume">350g</td>
+<td class="name">
+<span class="title cond">Gnocchi s kuřecím masem </span>
+<span class="allergen">(A: 1, 3, 7)</span>
+<p class="desc">v parmazánovém krému</p>
 </td>
 <td class="price cond">
         169 Kč    </td>
@@ -201,12 +191,12 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <tr>
 <td class="volume">150g</td>
 <td class="name">
-<span class="title cond">Filírovaný FLANK STEAK</span>
-<span class="allergen">(A: 1, 7, 12)</span>
-<p class="desc">s houbovým přelivem, hranolky</p>
+<span class="title cond">Kuřecí gyros </span>
+<span class="allergen">(A: 1, 3, 7)</span>
+<p class="desc">s tzatziki a pita chlebem </p>
 </td>
 <td class="price cond">
-        199 Kč    </td>
+        169 Kč    </td>
 </tr>
 <tr>
 <td class="volume">150g</td>
